--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.8",
     "@emailjs/browser": "^4.4.1",
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "express": "^4.18.2",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.13",
